Update and rename Updated website from tryit editor.html to index.html

--- a/index.html
+++ b/index.html
@@ -32,9 +32,8 @@ p  {
             <b>Internet Portal v0.1</b>
             </font>	
         </h3>
-        <p>
-        	<font color="black">
-            Welcome. One Brain Together is a creative studio based in <b>[redacted]</b>. 
+        <p><font color="black">
+           Welcome. One Brain Together is a creative studio based in <b>[redacted]</b>. 
 		<p>
 			<font face="times" size="2" color="blue">
 			<b>Please join our Discord</b>
@@ -46,6 +45,7 @@ p  {
 			</font>
 		</p>
         <p>
+			<a href="https://opensea.io/">
 			<font face="times" size="2" color="cyan">
 			<b>Please follow our Twitter</b>
 			</font>
