--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ p  {
 			</font></a>
 		</p>
         <p>
-			<a href="https://twitter.com/obt_cs/">
+			<a href="https://twitter.com/1braintogether/">
 			<font face="times" size="2" color="cyan">
 			<b>Please follow our Twitter</b>
 				</font></a>
@@ -55,5 +55,5 @@ p  {
 </body>
 <hr style="border: 1px solid rgb(2, 2, 2);">
 <footer>
-© 2021 One Brain Together
+© 2022 One Brain Together
 </html>
