--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ p  {
             </font>	
         </h3>
         <p><font color="black"> Welcome. One Brain Together is a creative studio based in <b>[redacted]</b>.<p>
-	<a href="https://discord.gg/r67zMdM9/">
+	<a href="https://discord.gg/ntfcBEBYS3">
 		<font face="times" size="2" color="blue">
 		<b>Please join our Discord</b>
            	</font>
