--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ p  {
         <h2>Links</h2>
         
         <ul>
-        	<li><a href="nnrm.html"><font face="times" size="4" color="red"><b>NEW NEURONS AND A ROADMAP FOR ONE BRAIN TOGETHER</font></a></li>
+        	<li><a href="newneurons.html"><font face="times" size="4" color="red"><b>NEW NEURONS AND A ROADMAP FOR ONE BRAIN TOGETHER</font></a></li>
 			
 		</ul>
         
