--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ p  {
 
 <body>
 	<header>
-		<h1>One Brain Together</h1>
+		<h1><a href="https://onebraintogether.com">One Brain Together</a></h1>
         <h3>
         	<font color="black">
             <b>Internet Portal v0.1</b>
@@ -57,7 +57,7 @@ p  {
         <h2>Links</h2>
         
         <ul>
-        	<li><a href="newneurons.html"><font face="times" size="4" color="red"><b>NEW NEURONS AND A ROADMAP FOR ONE BRAIN TOGETHER</font></a></li>
+        	<li><a href="newneurons.html"><font face="times" size="4" color="red">NEW NEURONS AND A ROADMAP FOR ONE BRAIN TOGETHER</font></a></li>
 			
 		</ul>
         
