--- a/newneurons.html
+++ b/newneurons.html
@@ -23,7 +23,7 @@
 
 <body>
 	<header>
-		<h1>One Brain Together</h1>
+		<h1><a href="https://onebraintogether.com">One Brain Together</a></h1>
         <h3>
         	<font color="red">
             <b>NEW NEURONS AND A ROADMAP FOR ONE BRAIN TOGETHER</b>
