--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ p  {
 
 <body>
 	<header>
-		<h1><a href="https://onebraintogether.com">One Brain Together</a></h1>
+		<h1><a href="https://onebraintogether.com"><font color="blue">One Brain Together</font></a></h1>
         <h3>
         	<font color="black">
             <b>Internet Portal v0.1</b>
