--- a/newneurons.html
+++ b/newneurons.html
@@ -29,28 +29,25 @@
             <b>NEW NEURONS AND A ROADMAP FOR ONE BRAIN TOGETHER</b>
             </font>	
         </h3>
-        <p> I’m iffy on roadmaps as they have been defined in this space, as a lot of the time they amount to nothing more than empty promises to serve as incentive to buy scam projects. That’s what we want to avoid here at all costs. But I want to share some more info on what I’ve been working on, and how it will impact what we do going forward.</p>
+        <p>Roadmaps amount to nothing more than empty promises to serve as incentive to buy into scams. That’s what we're not going to do. But I want to share some more info on what I’ve been working on, and how it will impact what we do going forward. I'll keep it as short as possible.</p>
 
-	<p><b>NEW NEURONS</b> will be the first point of entry into One Brain Together. 111 pieces that explore the intersection of photography and AI art — 100 Static Neurons, 10 Dynamic Neurons, and 1 Burnt Neuron.<p>
+	<p><b>NEW NEURONS</b> will be the first point of entry into One Brain Together. 111 pieces that explore the intersection of photography and AI art — 100 Static Neurons, 10 Dynamic Neurons, and 1 [redacted] Neuron (that's not what it's called, I just don't have a name for it yet.)<p>
 
-	<p><b>NEW NEURONS</b> act as your One Brain Together access token. Holders will receive the following utility: <br>
+	<p>Holders will receive the following utility: <br>
 <ul>
-<li><b>Free admission to all One Brain Together events</b>, the first of which will be in June 2022 during NFTNYC. </li>
+<li><b>Free admission to all One Brain Together events</b>, the first of which will held be in June 2022.</li>
 <li>Creative contribution to <b>community-owned projects</b> </li>
-<li>Exclusive <b>airdrops & allowlist</b> access <br> </li>
+<li>Exclusive <b>airdrops, giveaways, & allowlist</b> access <br> </li>
 <li><b>Lots more in the future</b> as this project develops </li> </ul> </p>
 
-<p><b>Drop 1</b> will consist of <b>10 Static Neurons @ 0.1Ξ</b> and <b>1 Dynamic Neuron</b> to be given away to a collector. <br>
-<b>Drop 2</b> will consist of <b>20 Static Neurons @ 0.1Ξ</b> and <b>2 Dynamic Neurons</b> - one to be given away to a collector, and one to be given away randomly. <br>
-<b>Drop 3</b> will consist of <b>30 Static Neurons @ 0.1Ξ</b> and <b>3 Dynamic Neurons</b> to be given away. <br> <b>Drop 4</b> will consist of <b>40 Static Neurons @ 0.1Ξ</b>, <b>4 Dynamic Neurons</b> to be given away, and <b>1 Burnt Neuron @ 1Ξ.</b> <br> Each drop will have giveaways, as well as airdrops to holders. </p>
+<p>There will be four Phases to this project. <b>Phase 1</b>, available March 22nd, will consist of <b>10 Static Neurons</b> and <b>1 Dynamic Neuron</b> for 0.1Ξ each.
 
-<p>If some of this terminology doesn't make sense to you, don't worry. We will make everything clear to all members as we go along.</p>
+<p>Each piece will have certain unique rarity characteristics.</p> Funds generated from NEW NEURONS will be used to develop new projects, events, apparel, and more for the One Brain Together community. here, we will update our community with Phase 2 and the next steps how we plan to venture further into the realms of film, photo, music, fashion, and product design as a community and build together across all mediums. <p>As I anticipate this will not sell out instantly, we will be building in the mean time. In addition to releases and events from One Brain Together, we will be working to produce collaborative projects that will be collectively owned by our community. The first will be a digital zine that can be burned to redeem a physical copy.</p>
 
-<p>As I anticipate this will not sell out instantly, we will be building in the mean time. In addition to releases and events from One Brain Together, we will be working to produce collaborative projects that will be collectively owned by our community. The first will be a digital zine that can be burned to redeem a physical copy.</p>
+	
+<p>If you're extremely confused right now, don't worry. Everything will be made clear as the project progresses.</p>
 
-<p>Funds generated from the <b>NEW NEURONS</b> collection will be used to pay for the production of One Brain Together’s first full-length documentary and corresponding screening event(s). From there, we will update our community with the next phase of how we plan to venture further into the realms of film, photo, music, fashion, and product design as a community and build together across all mediums.</p>
-
-<p>-Brian</p>
+<p>-Brian McHale</p>
         	 
         
 </header>
