--- a/newneurons.html
+++ b/newneurons.html
@@ -29,13 +29,13 @@
             <b>NEW NEURONS AND A ROADMAP FOR ONE BRAIN TOGETHER</b>
             </font>	
         </h3>
-        <p>Roadmaps amount to nothing more than empty promises to serve as incentive to buy into scams. That’s what we're not going to do. But I want to share some more info on what I’ve been working on, and how it will impact what we do going forward. I'll keep it as short as possible.</p>
+        <p>Roadmaps often are nothing more than empty promises that serve as incentive to buy into scams. That’s what we're not going to do. But I want to share some more info on what I’ve been working on, and how it will impact what we do going forward. I'll keep it as short as possible.</p>
 
-	<p><b>NEW NEURONS</b> will be the first point of entry into One Brain Together. 111 pieces that explore the intersection of photography and AI art — 100 Static Neurons, 10 Dynamic Neurons, and 1 [redacted] Neuron (that's not what it's called, I just don't have a name for it yet.)<p>
+	<p><b>NEW NEURONS</b> is the first point of entry into One Brain Together. 111 pieces that explore the intersection of photography and AI art — 100 Static Neurons, 10 Dynamic Neurons, and 1 [redacted] Neuron.<p>
 
 	<p>Holders will receive the following utility: <br>
 <ul>
-<li><b>Free admission to all One Brain Together events</b>, the first of which will held be in June 2022.</li>
+<li>Free admission to all One Brain Together events, the first of which will held be in <b>June 2022.</b></li>
 <li>Creative contribution to <b>community-owned projects</b> </li>
 <li>Exclusive <b>airdrops, giveaways, & allowlist</b> access <br> </li>
 <li><b>Lots more in the future</b> as this project develops </li> </ul> </p>
@@ -45,7 +45,7 @@
 <p>Each piece will have certain unique rarity characteristics.</p> Funds generated from NEW NEURONS will be used to develop new projects, events, apparel, and more for the One Brain Together community. here, we will update our community with Phase 2 and the next steps how we plan to venture further into the realms of film, photo, music, fashion, and product design as a community and build together across all mediums. <p>As I anticipate this will not sell out instantly, we will be building in the mean time. In addition to releases and events from One Brain Together, we will be working to produce collaborative projects that will be collectively owned by our community. The first will be a digital zine that can be burned to redeem a physical copy.</p>
 
 	
-<p>If you're extremely confused right now, don't worry. Everything will be made clear as the project progresses.</p>
+<p>If you're extremely confused right now, <a href=</p>
 
 <p>-Brian McHale</p>
         	 
