--- a/newneurons.html
+++ b/newneurons.html
@@ -30,21 +30,18 @@
             </font>	
         </h3>
         <p>Roadmaps are often nothing more than empty promises that serve as incentive to buy into scams. That’s what we're not going to do.</p>
-		<p><b>NEW NEURONS</b> is a collection of 111 pieces by Brian McHale that explore the intersection of photography and AI art. Each image is run through a Generative Adversarial Network (GAN), where it is recreated by an AI either as a Static image or a Dynamic animation. <There are <b>100 Static Neurons</b> and <b>10 Dynamic Neurons</b>. The 111th piece is [redacted].<p>
+		<p><b>NEW NEURONS</b> is a collection of 111 pieces by Brian McHale that explore the intersection of photography and AI art. Each image is run through a Generative Adversarial Network (GAN), where it is recreated by an AI either as a Static image or a Dynamic animation. There are <b>100 Static Neurons</b> and <b>10 Dynamic Neurons</b>. The 111th piece is [redacted].<p>
 		<p><b>NEW NEURONS</b> is also the first point of entry into One Brain Together and acts as your community access token. Collectors will receive the following utility:
 			<ul>
 				<li><b>Free admission</b> to all One Brain Together events</li>
 				<li>Creative contribution to <b>community-owned projects</b> </li>
-				<li>Exclusive <b>airdrops, giveaways, & allowlist</b> access <br> </li>
-				<li>Apparel and more...</li> 
+				<li>Exclusive <b>airdrops, giveaways, & allowlist</b> access</li>
+				<li>[redacted] and more as this project develops</li> 
 			</ul> 
 			</p>
 
-	<p>There will be four Phases to this project. Phase 1 begins <b>March 22nd, 2022</b> on Foundation. It will consist of <b>10 Static Neurons</b> and <b>1 Dynamic Neuron</b>, all @ 0.1Ξ each.</p>
-	<p>If you're extremely confused right now, <a href="https://discord.gg/ntfcBEBYS3">join our Discord</a>.</p>
-
-<p>-B</p>
-        	 
+	<p>There will be four Phases to this project. Phase 1 begins <b>March 22nd, 2022</b> on [redacted]. It will consist of <b>10 Static Neurons</b> and <b>1 Dynamic Neuron</b>, all @ 0.1Ξ each.</p>
+	<p>If you're extremely confused right now, <a href="https://discord.gg/ntfcBEBYS3"><font color="blue">join the One Brain Together Discord</font></a>.</p>        	 
         
 </header>
 </body>
