--- a/newneurons.html
+++ b/newneurons.html
@@ -26,22 +26,29 @@
 		<h1><a href="https://onebraintogether.com"><font color="blue">One Brain Together</font></a></h1>
         <h3>
         	<font color="red">
-            <b>NEW NEURONS AND A ROADMAP FOR ONE BRAIN TOGETHER</b>
+            <b>NEW NEURONS</b>
             </font>	
         </h3>
-        <p>Roadmaps are often nothing more than empty promises that serve as incentive to buy into scams. That’s what we're not going to do.</p>
-		<p><b>NEW NEURONS</b> is a collection of 111 pieces by Brian McHale that explore the intersection of photography and AI art. Each image is run through a Generative Adversarial Network (GAN), where it is recreated by an AI either as a Static image or a Dynamic animation. There are <b>100 Static Neurons</b> and <b>10 Dynamic Neurons</b>. The 111th piece is [redacted].<p>
-		<p><b>NEW NEURONS</b> is also the first point of entry into One Brain Together and acts as your community access token. Collectors will receive the following utility:
+	<h3>
+		<font color="red"><b>**CONGRATULATIONS,</b></font>
+		<font color="orange"><b> YOU WON!!</b></font>
+		<font color="yellow"><b> NEW NEURONS</b></font>
+		<font color="green"><b> PHASE 1</b></font>
+		<font color="blue"><b> AVAILABLE NOW</b></font>
+		<font color="indigo"><b> ON FOUNDATION</b></font>
+		<font color="violet"><b> CLICK HERE!!!!</b></font>
+		</h3>
+		<p><b>NEW NEURONS</b> is a collection by Brian McHale that explore the intersection of photography and AI art. Each image is run through a Generative Adversarial Network (GAN), where it is recreated by an AI either as a static image or a dynamic animation. Phase 1, <a href="https://foundation.app/collection/newneurons" color=blue>available now on Foundation</a>, consists of <b>10 Static Neurons</b> and <b>1 Dynamic Neuron</b>.<p>
+		<p><b>NEW NEURONS</b> is also a community access token and the first point of entry into One Brain Together. Collectors will receive the following utility:
 			<ul>
-				<li><b>Free admission</b> to all One Brain Together events</li>
-				<li>Creative contribution to <b>community-owned projects</b> </li>
-				<li>Exclusive <b>airdrops, giveaways, & allowlist</b> access</li>
-				<li>[redacted] and more as this project develops</li> 
+				<li>[redacted]</li>
+				<li>[redacted]</li>
+				<li>[redacted]</li>
+				<li>NO ROADMAPS</li> 
 			</ul> 
 			</p>
 
-	<p>There will be four Phases to this project. Phase 1 begins <b>March 22nd, 2022</b> on [redacted]. It will consist of <b>10 Static Neurons</b> and <b>1 Dynamic Neuron</b>, all @ 0.1Ξ each.</p>
-	<p>If you're extremely confused right now, <a href="https://discord.gg/ntfcBEBYS3"><font color="blue">join the One Brain Together Discord</font></a>.</p>        	 
+	<p>To get involved, <a href="https://discord.gg/ntfcBEBYS3"><font color="blue">join the One Brain Together Discord</font></a>.</p>        	 
         
 </header>
 </body>
