--- a/newneurons.html
+++ b/newneurons.html
@@ -26,7 +26,7 @@
 		<h1><a href="https://onebraintogether.com"><font color="blue">One Brain Together</font></a></h1>
         <h3>
         	<font color="red">
-            <b>NEW NEURONS AND A ROADMAP FOR ONE BRAIN TOGETHER</b>
+            <b>NEW NEURONS (++ AND A ROADMAP FOR ONE BRAIN TOGETHER)</b>
             </font>	
         </h3>
 	<h3>
