--- a/newneurons.html
+++ b/newneurons.html
@@ -30,16 +30,10 @@
             </font>	
         </h3>
 	<h3><a href=https://foundation.app/collection/newneurons>
-		<font color="magenta"><b>**CONGRATULATIONS, YOU WON!! NEW NEURONS PHASE 1 AVAILABLE NOW ON FOUNDATION, CLICK HERE!!!!**</b></font>
-		<!--
-		     <font color="orange"><b> YOU WON!!</b></font>
-		<font color="gold"><b> NEW NEURONS</b></font>
-		<font color="green"><b> PHASE 1</b></font>
-		<font color="blue"><b> AVAILABLE NOW</b></font>
-		<font color="indigo"><b> ON FOUNDATION</b></font>
-		<font color="violet"><b> CLICK HERE!!!!</b></font>
-		-->
-		</h3>
+		<font color="magenta"><b>**CONGRATULATIONS, YOU WON!! </b></font>
+		<font color="green"><b>NEW NEURONS AVAILABLE ON FOUNDATION,</b></font>
+		<font color="orange"><b> CLICK HERE NOW!!!!**</b></font>
+		</a></h3>
 		<p><b>NEW NEURONS</b> is a collection by Brian McHale that explore the intersection of photography and AI art. Each image is run through a Generative Adversarial Network (GAN), where it is recreated by an AI either as a static image or a dynamic animation. Phase 1, <a href="https://foundation.app/collection/newneurons" color=blue>available now on Foundation</a>, consists of <b>10 Static Neurons</b> and <b>1 Dynamic Neuron</b>.<p>
 		<p><b>NEW NEURONS</b> is also the first point of entry into One Brain Together, serving as a community access token. Collectors will receive the following utility:
 			<ul>
