--- a/newneurons.html
+++ b/newneurons.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>One Brain Together - NEW NEURONS AND A ROADMAP FOR ONE BRAIN TOGETHER</title>
+    <title>One Brain Together - NEW NEURONS</title>
 	<style>
 	h1 {
   	color: blue;
