--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ p  {
         <h2>Links</h2>
         
         <ul>
-        	<li><a href="newneurons.html"><font face="times" size="4" color="red">NEW NEURONS AND A ROADMAP FOR ONE BRAIN TOGETHER</font></a></li>
+        	<li><a href="newneurons.html"><font face="times" size="4" color="red">NEW NEURONS</font></a></li>
 			
 		</ul>
         
