--- a/newneurons.html
+++ b/newneurons.html
@@ -34,7 +34,7 @@
 		<font color="green"><b>NEW NEURONS AVAILABLE ON FOUNDATION,</b></font>
 		<font color="orange"><b> CLICK HERE NOW!!!!**</b></font>
 		</a></h3>
-		<p><b>NEW NEURONS</b> is a collection by Brian McHale that explore the intersection of photography and AI art. Each image is run through a Generative Adversarial Network (GAN), where it is recreated by an AI either as a static image or a dynamic animation. Phase 1, <a href="https://foundation.app/collection/newneurons" color=blue>available now on Foundation</a>, consists of <b>10 Static Neurons</b> and <b>1 Dynamic Neuron</b>.<p>
+		<p><b>NEW NEURONS</b> is a collection by Brian McHale that explore the intersection of photography and AI art. Each image is run through a Generative Adversarial Network (GAN), where it is recreated by an AI either as a static image or a dynamic animation.<br>Phase 1, <a href="https://foundation.app/collection/newneurons"><font color=blue>available now on Foundation</font></a>, consists of <b>10 Static Neurons</b> and <b>1 Dynamic Neuron</b>.<p>
 		<p><b>NEW NEURONS</b> is also the first point of entry into One Brain Together, serving as a community access token. Collectors will receive the following utility:
 			<ul>
 				<li>[redacted]</li>
