--- a/newneurons.html
+++ b/newneurons.html
@@ -40,7 +40,7 @@
 				<li>[redacted]</li>
 				<li>[redacted]</li>
 				<li>[redacted]</li>
-				<li>NO ROADMAP</li> 
+				<li>[redacted] and more!</li> 
 			</ul> 
 			</p>
 
