--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@ p  {
         <h2>Links</h2>
         
         <ul>
-        	<li><a href="newneurons.html"><font face="times" size="4" color="red">NEW NEURONS</font></a></li>
+        	<li><a href="obt.html"><font face="times" size="4" color="red">Obt.</font></a></li>
+		<li><a href="newneurons.html"><font face="times" size="4" color="red">NEW NEURONS</font></a></li>
 			
 		</ul>
         
