--- a/obt.html
+++ b/obt.html
@@ -36,7 +36,7 @@
 		<font color="magenta"><b>MINTING BEGINS SEPTEMBER 12TH</b></font>
 		</a></h3>
 
-	<div id="bueno-embed-container"></div>
+<div id="bueno-embed-container"></div>
 
 <script type="module">
   import { BuenoWidget } from "https://nft.bueno.art/widget/latest.js";
@@ -46,15 +46,16 @@
   );
 
   widget.init({
-    contractAddress: "0xa04Cd49E472B34F1C35551064Da12746931854F4",
-    chainId: 5,
+    contractAddress: "0xdbe74dd5c9c6e6a3F6473F5ae73b699cd0AE4AEb",
+    chainId: 1,
     button: { background: "#3400ff" },
-    showPrice: false,
+    showPrice: true,
     showSupply: true,
     autoConnect: false,
     allowlistId: "fxyWo_bhRWtK5kHtSTWmx",
   });
 </script>
+  
   
 
 	<p><b>Obt.</b> is a collection of 1,111 free generative ERC-721 tokens by One Brain Together. To mint, you will need an <a href="https://metamask.io/"><font color="blue">Ethereum wallet</font></a>.</p>
