--- a/obt.html
+++ b/obt.html
@@ -55,7 +55,28 @@
     allowlistId: "fxyWo_bhRWtK5kHtSTWmx",
   });
 </script>
-  
+
+	<p>
+<b>HOW TO MINT</b>
+<ol>
+<li>Click "Connect Wallet"</li>
+<li>Connect your Ethereum wallet (MetaMask or WalletConnect)</li>
+<li>Select the number of tokens you would like to mint - you can mint up to 10 tokens per wallet for FREE.</li>
+<li>Click "Mint Presale"</li>
+<li>Pay gas fee (requires ETH)</li>
+<li>Wait for confirmation - this should take 1-2 minutes.</li>
+</p>
+
+<p>If minting was successful, you will see a message that says "Successfully Minted Tokens". Once your tokens are minted, you can view and trade them by connecting your wallet to a secondary marketplace such as OpenSea. There will be a placeholder CD-ROM image until the reveal on Thursday, September 15th.</p>
+
+<p>If you are having trouble minting, tell us about it on our <a href="https://discord.gg/myKe3zhRY2"><font color="blue">Discord</font></a>.
+
+
+<p><u>Contract Address:</u> 0xdbe74dd5c9c6e6a3F6473F5ae73b699cd0AE4AEb</p>
+<p><u>Official OpenSea Collection:</u> https://opensea.io/collection/onebraintogether</p>
+
+
+<p><b>Obt.</b> is a collection of 1,111 free generative ERC-721 tokens by One Brain Together. To mint, you will need an <a href="https://metamask.io/"><font color="blue">Ethereum wallet</font></a>.</p>
   
 
 	<p><b>Obt.</b> is a collection of 1,111 free generative ERC-721 tokens by One Brain Together. To mint, you will need an <a href="https://metamask.io/"><font color="blue">Ethereum wallet</font></a>.</p>
@@ -67,21 +88,8 @@
 <p><b><u>Mint Information</u></b><br><u>Supply:</u> 1,111<br><u>Price:</u> Free (+ transaction fee)<br><u>Maximum per wallet:</u> 10<br><u>Secondary royalties:</u> 7.5%</p>
 <p>Obt. uses a <a href="https://creativecommons.org/share-your-work/public-domain/cc0/"><font color="blue">CC0 (Creative Commons)</font></a> license to allow collectors to create additional art, products, derivative projects, and more on top of their existing IP without fear of copyright infringements. It should be noted that the CC0 license only applies to the Obt. collection and not One Brain Together as a whole.</p>
 <p>The deployer address will mint ~10% of the supply in advance. Most of these will be staked in a digital vault to create liquidity for the project, the rest will be used for giveaways and other community building initiatives.</p>
-<p>In addition to our allowlist, we are giving presale access to a select number of communities. <a href="https://guild.xyz/onebraintogether"><font color="blue">Join our Guild</font></a> to see if you qualify and gain access to additional roles in our Discord server. The following communities can mint for free during the presale period:
-	<ul>
-		<li>Adam Bomb Squad</li>
-		<li>AdWorld</li>
-		<li>Allstarz</li>
-		<li>Cool Cats (+ Cool Pets)</li>
-		<li>Deadfellaz (+ Deadfrenz)</li>
-		<li>Good Minds</li>
-		<li>Felt Zine (all collections)</li>
-		<li>Friends With Benefits (5+ $FWB)</li>
-		<li>The Heart Project</li>
-		<li>Milady</li>
-		<li>ZENFT (Bonsai and Forest Spirits)</li>
-		<li>Zorbs</li>
-	</ul>
+<p>In addition to our allowlist, we are giving presale access to a select number of communities. <a href="https://guild.xyz/onebraintogether"><font color="blue">Join our Guild</font></a> to see if you qualify and gain access to additional roles in our Discord server.
+
 </p>
 </body>
 <hr style="border: 1px solid rgb(2, 2, 2);">
