--- a/obt.html
+++ b/obt.html
@@ -26,15 +26,12 @@
 	<header>
 		<h1><a href="https://onebraintogether.com"><font color="blue">One Brain Together</font></a></h1>
         <h3>
-        	<font color="red">
-            <b>Obt.</b>
-            </font>	
+        <font color="red">
+		<b>Obt.- <a href="https://guild.xyz/onebraintogether">PREMINT IS LIVE NOW</a></b>
+           </font>	
         </h3>
 	</header>
 
-	<h3><a href=https://guild.xyz/onebraintogether>
-		<font color="magenta"><b>MINTING BEGINS SEPTEMBER 12TH</b></font>
-		</a></h3>
 
 <div id="bueno-embed-container"></div>
 
