--- a/obt.html
+++ b/obt.html
@@ -53,25 +53,28 @@
   });
 </script>
 
-	<p>
+<p>
 <b>HOW TO MINT</b>
-<ol>
-<li>Click "Connect Wallet"</li>
-<li>Connect your Ethereum wallet (MetaMask or WalletConnect)</li>
-<li>Select the number of tokens you would like to mint - you can mint up to 10 tokens per wallet for FREE.</li>
-<li>Click "Mint Presale"</li>
-<li>Pay gas fee (requires ETH)</li>
-<li>Wait for confirmation - this should take 1-2 minutes.</li>
+	<ol>
+	<li>Click "Connect Wallet"</li>
+	<li>Connect your Ethereum wallet (MetaMask or WalletConnect)</li>
+	<li>Select the number of tokens you would like to mint - you can mint up to 10 tokens per wallet for FREE.</li>
+	<li>Click "Mint Presale"</li>
+	<li>Pay gas fee (requires ETH)</li>
+	<li>Wait for confirmation - this should take 1-2 minutes.</li>
+	</ol>	
 </p>
 
 <p>If minting was successful, you will see a message that says "Successfully Minted Tokens". Once your tokens are minted, you can view and trade them by connecting your wallet to a secondary marketplace such as OpenSea. There will be a placeholder CD-ROM image until the reveal on Thursday, September 15th.</p>
 
 <p>If you are having trouble minting, tell us about it on our <a href="https://discord.gg/myKe3zhRY2"><font color="blue">Discord</font></a>.
 
-
-<p><u>Contract Address:</u> 0xdbe74dd5c9c6e6a3F6473F5ae73b699cd0AE4AEb</p>
-<p><u>Official OpenSea Collection:</u> https://opensea.io/collection/onebraintogether</p>
-
+<h3>Important Links</h3>
+	<ul>
+	<li><a href="https://etherscan.io/address/0xdbe74dd5c9c6e6a3F6473F5ae73b699cd0AE4AEb"><font color="blue">Etherscan Contract</font></a></li>
+	<li><a href="https://opensea.io/collection/onebraintogether"><font color="blue">OpenSea Collection</font></a></li>
+	<li><a href="https://discord.gg/myKe3zhRY2"><font color="blue">Discord Server</font></a></li>
+	</ul>
 
 <p><b>Obt.</b> is a collection of 1,111 free generative ERC-721 tokens by One Brain Together. To mint, you will need an <a href="https://metamask.io/"><font color="blue">Ethereum wallet</font></a>.</p>
   
