--- a/obt.html
+++ b/obt.html
@@ -27,7 +27,7 @@
 		<h1><a href="https://onebraintogether.com"><font color="blue">One Brain Together</font></a></h1>
         <h3>
         <font color="red">
-		<b>Obt.- <a href="https://guild.xyz/onebraintogether">PREMINT IS LIVE NOW</a></b>
+		<b>Obt.- <a href="https://guild.xyz/onebraintogether"><font color="red">PREMINT IS LIVE NOW</font></a></b>
            </font>	
         </h3>
 	</header>
@@ -71,9 +71,9 @@
 
 <h3>Important Links</h3>
 	<ul>
-	<li><a href="https://etherscan.io/address/0xdbe74dd5c9c6e6a3F6473F5ae73b699cd0AE4AEb"><font color="blue">Etherscan Contract</font></a></li>
 	<li><a href="https://opensea.io/collection/onebraintogether"><font color="blue">OpenSea Collection</font></a></li>
 	<li><a href="https://discord.gg/myKe3zhRY2"><font color="blue">Discord Server</font></a></li>
+	<li><a href="https://etherscan.io/address/0xdbe74dd5c9c6e6a3F6473F5ae73b699cd0AE4AEb"><font color="blue">Etherscan Contract</font></a></li>	
 	</ul>
 
 <p><b>Obt.</b> is a collection of 1,111 free generative ERC-721 tokens by One Brain Together. To mint, you will need an <a href="https://metamask.io/"><font color="blue">Ethereum wallet</font></a>.</p>
