--- a/obt.html
+++ b/obt.html
@@ -31,7 +31,15 @@
            </font>	
         </h3>
 	</header>
+	
+<p><b>Obt.</b> is a collection of 1,111 free generative ERC-721 tokens by One Brain Together. To mint, you will need an <a href="https://metamask.io/"><font color="blue">Ethereum wallet</font></a>.</p>
 
+	<h3><u>Important Links</u></h2>
+	<ul>
+	<li><a href="https://opensea.io/collection/onebraintogether"><font color="blue">OpenSea Collection</font></a></li>
+	<li><a href="https://discord.gg/myKe3zhRY2"><font color="blue">Discord Server</font></a></li>
+	<li><a href="https://etherscan.io/address/0xdbe74dd5c9c6e6a3F6473F5ae73b699cd0AE4AEb"><font color="blue">Etherscan Contract</font></a></li>	
+	</ul>	
 
 <div id="bueno-embed-container"></div>
 
@@ -53,8 +61,8 @@
   });
 </script>
 
-<p>
-<b>HOW TO MINT</b>
+<h2>
+	<u><HOW TO MINT</u></h2>
 	<ol>
 	<li>Click "Connect Wallet"</li>
 	<li>Connect your Ethereum wallet (MetaMask or WalletConnect)</li>
@@ -62,24 +70,14 @@
 	<li>Click "Mint Presale"</li>
 	<li>Pay gas fee (requires ETH)</li>
 	<li>Wait for confirmation - this should take 1-2 minutes.</li>
-	</ol>	
-</p>
+	</ol>
 
 <p>If minting was successful, you will see a message that says "Successfully Minted Tokens". Once your tokens are minted, you can view and trade them by connecting your wallet to a secondary marketplace such as OpenSea. There will be a placeholder CD-ROM image until the reveal on Thursday, September 15th.</p>
 
 <p>If you are having trouble minting, tell us about it on our <a href="https://discord.gg/myKe3zhRY2"><font color="blue">Discord</font></a>.
 
-<h3>Important Links</h3>
-	<ul>
-	<li><a href="https://opensea.io/collection/onebraintogether"><font color="blue">OpenSea Collection</font></a></li>
-	<li><a href="https://discord.gg/myKe3zhRY2"><font color="blue">Discord Server</font></a></li>
-	<li><a href="https://etherscan.io/address/0xdbe74dd5c9c6e6a3F6473F5ae73b699cd0AE4AEb"><font color="blue">Etherscan Contract</font></a></li>	
-	</ul>
-
-<p><b>Obt.</b> is a collection of 1,111 free generative ERC-721 tokens by One Brain Together. To mint, you will need an <a href="https://metamask.io/"><font color="blue">Ethereum wallet</font></a>.</p>
   
-
-	<p><b>Obt.</b> is a collection of 1,111 free generative ERC-721 tokens by One Brain Together. To mint, you will need an <a href="https://metamask.io/"><font color="blue">Ethereum wallet</font></a>.</p>
+	<h2><u>ABOUT</u></h2>
 <p><b><u>Inspired by the early internet, redesigned for the future internet.</u></b><br>Algorithmically generated from more than 150 traits celebrating DIY communities both IRL and online, Obt. is designed to be an art- and fashion-focused avatar project combining contemporary and nostalgic influences. Each token is unique and has a varying rarity level based on a combination of 4-8 attributes. Certain traits will unlock token-gated utility as we build the One Brain Together ecosystem.</p>
 <p><b><u>IDK MY BFF OBT</u></b><br>In the <a href="https://discord.gg/myKe3zhRY2"><font color="blue">One Brain Together Discord community</font></a>, we hope to create an environment that emulates the feeling of the instant messaging and chat room platforms that have been lost to time and capitalism. Minting a token will give you access to exclusive channels in our server, where you can contribute to upcoming projects and more.</p>
 
