--- a/obt.html
+++ b/obt.html
@@ -61,8 +61,7 @@
   });
 </script>
 
-<h2>
-	<u><HOW TO MINT</u></h2>
+<h2><HOW TO MINT</h2>
 	<ol>
 	<li>Click "Connect Wallet"</li>
 	<li>Connect your Ethereum wallet (MetaMask or WalletConnect)</li>
