--- a/obt.html
+++ b/obt.html
@@ -25,19 +25,19 @@
 <body>
 	<header>
 		<h1><a href="https://onebraintogether.com"><font color="blue">One Brain Together</font></a></h1>
-        <h3>
+        <h2>
         <font color="red">
-		<b>Obt.- <a href="https://guild.xyz/onebraintogether"><font color="red">PREMINT IS LIVE NOW</font></a></b>
+		<b>Obt. - <a href="https://onebraintogether.com/obt"><font color="red">PREMINT IS LIVE NOW</font></a></b>
            </font>	
-        </h3>
+        </h2>
 	</header>
 	
 <p><b>Obt.</b> is a collection of 1,111 free generative ERC-721 tokens by One Brain Together. To mint, you will need an <a href="https://metamask.io/"><font color="blue">Ethereum wallet</font></a>.</p>
 
 	<h2><u>Important Links</u></h2>
 	<ul>
+	<li><a href="https://discord.gg/myKe3zhRY2"><font color="blue">Discord Server</font></a></li>	
 	<li><a href="https://opensea.io/collection/onebraintogether"><font color="blue">OpenSea Collection</font></a></li>
-	<li><a href="https://discord.gg/myKe3zhRY2"><font color="blue">Discord Server</font></a></li>
 	<li><a href="https://etherscan.io/address/0xdbe74dd5c9c6e6a3F6473F5ae73b699cd0AE4AEb"><font color="blue">Etherscan Contract</font></a></li>	
 	</ul>	
 
@@ -61,7 +61,7 @@
   });
 </script>
 
-<h2>HOW TO MINT</h2>
+<h3>HOW TO MINT</h3>
 	<ol>
 	<li>Click "Connect Wallet"</li>
 	<li>Connect your Ethereum wallet (MetaMask or WalletConnect)</li>
@@ -76,16 +76,16 @@
 <p>If you are having trouble minting, tell us about it on our <a href="https://discord.gg/myKe3zhRY2"><font color="blue">Discord</font></a>.
 
   
-	<h2><u>ABOUT</u></h2>
+<h3>ABOUT Obt.</h3>
 <p><b><u>Inspired by the early internet, redesigned for the future internet.</u></b><br>Algorithmically generated from more than 150 traits celebrating DIY communities both IRL and online, Obt. is designed to be an art- and fashion-focused avatar project combining contemporary and nostalgic influences. Each token is unique and has a varying rarity level based on a combination of 4-8 attributes. Certain traits will unlock token-gated utility as we build the One Brain Together ecosystem.</p>
 <p><b><u>IDK MY BFF OBT</u></b><br>In the <a href="https://discord.gg/myKe3zhRY2"><font color="blue">One Brain Together Discord community</font></a>, we hope to create an environment that emulates the feeling of the instant messaging and chat room platforms that have been lost to time and capitalism. Minting a token will give you access to exclusive channels in our server, where you can contribute to upcoming projects and more.</p>
 
 <p><b><u>Important Dates</u></b><br><u>Presale:</u> September 12th, 2022<br><u>Public sale:</u> September 20th, 2022</p> 
 
-<p><b><u>Mint Information</u></b><br><u>Supply:</u> 1,111<br><u>Price:</u> Free (+ transaction fee)<br><u>Maximum per wallet:</u> 10<br><u>Secondary royalties:</u> 7.5%</p>
+<p><b><u>Mint Information</u></b><br><u>Supply:</u> 1,111<br><u>Price:</u> Free (+ gas fee)<br><u>Maximum per wallet:</u> 10<br><u>Secondary royalties:</u> 7.5%</p>
 <p>Obt. uses a <a href="https://creativecommons.org/share-your-work/public-domain/cc0/"><font color="blue">CC0 (Creative Commons)</font></a> license to allow collectors to create additional art, products, derivative projects, and more on top of their existing IP without fear of copyright infringements. It should be noted that the CC0 license only applies to the Obt. collection and not One Brain Together as a whole.</p>
 <p>The deployer address will mint ~10% of the supply in advance. Most of these will be staked in a digital vault to create liquidity for the project, the rest will be used for giveaways and other community building initiatives.</p>
-<p>In addition to our allowlist, we are giving presale access to a select number of communities. <a href="https://guild.xyz/onebraintogether"><font color="blue">Join our Guild</font></a> to see if you qualify and gain access to additional roles in our Discord server.
+<p><a href="https://guild.xyz/onebraintogether"><font color="blue">Join our Guild</font></a> to gain access to additional roles in our Discord server.
 
 </p>
 </body>
