--- a/obt.html
+++ b/obt.html
@@ -32,14 +32,6 @@
         </h2>
 	</header>
 	
-<p><b>Obt.</b> is a collection of 1,111 free generative ERC-721 tokens by One Brain Together. To mint, you will need an <a href="https://metamask.io/"><font color="blue">Ethereum wallet</font></a>.</p>
-
-	<h3>IMPORTANT LINKS</h3>
-	<ul>
-	<li><a href="https://discord.gg/myKe3zhRY2"><font color="blue">Discord Server</font></a></li>	
-	<li><a href="https://opensea.io/collection/onebraintogether"><font color="blue">OpenSea Collection</font></a></li>
-	<li><a href="https://etherscan.io/address/0xdbe74dd5c9c6e6a3F6473F5ae73b699cd0AE4AEb"><font color="blue">Etherscan Contract</font></a></li>	
-	</ul>	
 
 <div id="bueno-embed-container"></div>
 
@@ -60,6 +52,15 @@
     allowlistId: "fxyWo_bhRWtK5kHtSTWmx",
   });
 </script>
+	
+<p><b>Obt.</b> is a collection of 1,111 free generative ERC-721 tokens by One Brain Together. To mint, you will need an <a href="https://metamask.io/"><font color="blue">Ethereum wallet</font></a>.</p>
+
+	<h3>OFFICIAL LINKS</h3>
+	<ul>
+	<li><a href="https://discord.gg/myKe3zhRY2"><font color="blue">Discord Server</font></a></li>	
+	<li><a href="https://opensea.io/collection/onebraintogether"><font color="blue">OpenSea Collection</font></a></li>
+	<li><a href="https://etherscan.io/address/0xdbe74dd5c9c6e6a3F6473F5ae73b699cd0AE4AEb"><font color="blue">Etherscan Contract</font></a></li>	
+	</ul>		
 
 <h3>HOW TO MINT</h3>
 	<ol>
@@ -71,7 +72,7 @@
 	<li>Wait for confirmation - this should take 1-2 minutes</li>
 	</ol>
 
-<p>If minting was successful, you will see a message that says "Successfully Minted Tokens". Once your tokens are minted, you can view and trade them by connecting your wallet to a secondary marketplace such as OpenSea. There will be a placeholder CD-ROM image until the reveal on Thursday, September 15th.</p>
+<p>If minting was successful, you will see a message that says <i><font color="green">Successfully Minted Tokens</font></i>. Once your tokens are minted, you can view and trade them by connecting your wallet to a secondary marketplace such as <a href="https://opensea.io/collection/onebraintogether"><font color="blue">OpenSea</font></a>. There will be a placeholder CD-ROM image until the reveal on Thursday, September 15th.</p>
 
 <p>If you are having trouble minting, tell us about it on our <a href="https://discord.gg/myKe3zhRY2"><font color="blue">Discord</font></a>.
 
