--- a/obt.html
+++ b/obt.html
@@ -66,13 +66,13 @@
 	<ol>
 	<li>Click "Connect Wallet"</li>
 	<li>Connect your Ethereum wallet</li>
-	<li>Select the number of tokens you would like to mint - you can mint up to 10 tokens per wallet for FREE</li>
+	<li>Select the number of tokens you would like to mint - you can mint up to 10 tokens per wallet for free</li>
 	<li>Click "Mint Presale"</li>
 	<li>Pay gas fee</li>
 	<li>Wait for confirmation - this should take 1-2 minutes</li>
 	</ol>
 
-<p>If minting was successful, you will see a message that says <i><font color="green">Successfully Minted Tokens</font></i>. Once your tokens are minted, you can view and trade them by connecting your wallet to a secondary marketplace such as <a href="https://opensea.io/collection/onebraintogether"><font color="blue">OpenSea</font></a>. There will be a placeholder CD-ROM image until the reveal on Thursday, September 15th.</p>
+<p>If minting was successful, you will see a message that says <i><font color="green">Successfully Minted Tokens</font></i>. Once your tokens are minted, you can view and trade them by connecting your wallet to a secondary marketplace such as <a href="https://opensea.io/collection/onebraintogether"><font color="blue">OpenSea</font></a>. There will be a placeholder CD-ROM image on all tokens until the reveal on Thursday, September 15th.</p>
 
 <p>If you are having trouble minting, tell us about it on our <a href="https://discord.gg/myKe3zhRY2"><font color="blue">Discord</font></a>.
 
