--- a/obt.html
+++ b/obt.html
@@ -27,7 +27,7 @@
 		<h1><a href="https://onebraintogether.com"><font color="blue">One Brain Together</font></a></h1>
         <h2>
         <font color="red">
-		<b>Obt. - <a href="https://onebraintogether.com/obt"><font color="red">PRESALE LIVE NOW</font></a></b>
+		<b>Obt. - <a href="https://onebraintogether.com/obt"><font color="red">SOLD OUT</font></a></b>
            </font>	
         </h2>
 	</header>
@@ -80,13 +80,14 @@
 <h3>ABOUT Obt.</h3>
 <p><b><u>Inspired by the early internet, redesigned for the future internet.</u></b><br>Algorithmically generated from more than 150 traits celebrating DIY communities both IRL and online, Obt. is designed to be an art- and fashion-focused avatar project combining contemporary and nostalgic influences. Each token is unique and has a varying rarity level based on a combination of 4-8 attributes. Certain traits will unlock token-gated utility as we build the One Brain Together ecosystem.</p>
 <p><b><u>IDK MY BFF OBT</u></b><br>In the <a href="https://discord.gg/myKe3zhRY2"><font color="blue">One Brain Together Discord community</font></a>, we hope to create an environment that emulates the feeling of the instant messaging and chat room platforms that have been lost to time and capitalism. Minting a token will give you access to exclusive channels in our server, where you can contribute to upcoming projects and more.</p>
+	<p><a href="https://guild.xyz/onebraintogether"><font color="blue">Join our Guild</font></a> to gain access to token-gated channels and additional roles in our Discord server.
+
 
 <p><b><u>Important Dates</u></b><br>Presale: September 12th, 2022<br>Public sale: September 20th, 2022</p> 
 
 <p><b><u>Mint Information</u></b><br>Supply: 1,111<br>Price: Free (+ gas fee)<br>Maximum per wallet: 10<br>Secondary royalties: 7.5%</p>
 <p>Obt. uses a <a href="https://creativecommons.org/share-your-work/public-domain/cc0/"><font color="blue">CC0 (Creative Commons)</font></a> license to allow collectors to create additional art, products, derivative projects, and more on top of their existing IP without fear of copyright infringements. It should be noted that the CC0 license only applies to the Obt. collection and not One Brain Together as a whole.</p>
 <p>The deployer address will mint ~10% of the supply in advance. Most of these will be staked in a digital vault to create liquidity for the project, the rest will be used for giveaways and other community building initiatives.</p>
-<p><a href="https://guild.xyz/onebraintogether"><font color="blue">Join our Guild</font></a> to gain access to additional roles in our Discord server.
 
 </p>
 </body>
