--- a/Middleground.html
+++ b/Middleground.html
@@ -52,14 +52,8 @@
 </script>
   
 	
-<p><b>Middleground</b> is a series of nine photography editions by Brian McHale. It is a companion collection to Obt., our digital collectible project. To mint, you will need an <a href="https://metamask.io/"><font color="blue">Ethereum wallet</font></a>.</p>
-
-	<h3>OFFICIAL LINKS</h3>
-	<ul>
-	<li><a href="https://discord.gg/myKe3zhRY2"><font color="blue">Discord Server</font></a></li>	
-	<li><a href="https://opensea.io/collection/onebraintogether"><font color="blue">OpenSea Collection</font></a></li>
-	<li><a href="https://etherscan.io/address/0xdbe74dd5c9c6e6a3F6473F5ae73b699cd0AE4AEb"><font color="blue">Etherscan Contract</font></a></li>	
-	</ul>		
+<p><b>Middleground</b> is a series of nine photography editions by Brian McHale. It is a companion collection to <a href="https://opensea.io/collection/onebraintogether"><font color="blue">Obt.</font></a>, our digital collectible project. To mint, you will need an <a href="https://metamask.io/"><font color="blue">Ethereum wallet</font></a>.</p>
+		
 
 <h3>HOW TO MINT</h3>
 	<ol>
@@ -71,20 +65,22 @@
 	<li>Wait for confirmation - this should take 1-2 minutes</li>
 	</ol>
 
-<p>If minting was successful, you will see a message that says <i><font color="green">Successfully Minted Tokens</font></i>. Once your tokens are minted, you can view and trade them by connecting your wallet to a secondary marketplace such as <a href="https://opensea.io/collection/onebraintogether"><font color="blue">OpenSea</font></a>.</p>
-
-<p>If you are having trouble minting, tell us about it on our <a href="https://discord.gg/myKe3zhRY2"><font color="blue">Discord</font></a>.
+<p>If minting was successful, you will see a message that says <i><font color="green">Successfully Minted Tokens</font></i>. Once your tokens are minted, you can view and trade them by connecting your wallet to a secondary marketplace such as <a href="https://opensea.io/collection/onebraintogether"><font color="blue">OpenSea</font></a>. If you are having trouble minting, tell us about it on our <a href="https://discord.gg/myKe3zhRY2"><font color="blue">Discord</font></a>.</p>
 
   
 <h3>ABOUT MIDDLEGROUND</h3>
 <p>Middleground is a of nine 35mm photographs by Brian McHale. All photos were used as backgrounds in <a href="https://onebraintogether.com/obt"><font color="blue">Obt.</font></a>, a digital collectible project by One Brain Together. There are 11 editions of each photo, with a randomized mint.</p> 
-<p>Approximately half of the collection will be available for Obt. collectors to claim for free during a limited presale window; one per wallet address. The rest of the collection will be available to the public following this period.</p>
-<p>All collectors will receive the same community benefits as our Obt. token holders, with additional roles and utility available for collectors of both Obt. and Middleground. <a href="https://guild.xyz/onebraintogether"><font color="blue">Join our Guild</font></a> to gain access to token-gated channels and additional roles in our Discord server.</p>
+
+<p><b>All Middleground collectors will have the ability to purchase a numbered hi-res print of their photo.<br>Collectors who mint three (3) Middleground tokens can redeem one (1) FREE hi-res print of the photo of their choice.<br>Collectors who mint five (5) Middleground tokens can redeem two (2) FREE hi-res prints of the photos of their choice.</b></p>
+
+<p>Approximately half of the collection will be available for <a href="https://opensea.io/collection/onebraintogether"><font color="blue">Obt.</font></a> collectors to claim for free during a limited presale window; one per wallet address. The rest of the collection will be available to the public following this period.</p>
+
+<p><b><u>Important Dates</u></b><br>Presale: November 18th, 2022<br>Public sale: November 21st, 2022</p> 
+
+<p><b><u>Mint Information</u></b><br>Total Supply: 99<br>Presale Supply: 44<br>Price: 0.01 ETH (presale free for <a href="https://opensea.io/collection/onebraintogether"><font color="blue">Obt.</font></a> holders)<br>Secondary royalties: 10%</p>
 
 
-<p><b><u>Important Dates</u></b><br>Presale: November 21st, 2022<br>Public sale: November 20th, 2022</p> 
-
-<p><b><u>Mint Information</u></b><br>Supply: 99<br>Price: 0.01 ETH (limited amount free for Obt. holders)<br>Secondary royalties: 10%</p>
+<p>Join our <a href="https://discord.gg/myKe3zhRY2"><font color="blue">Discord Server</font></a> and <a href="https://guild.xyz/onebraintogether"><font color="blue">verify your wallet</font></a> to gain access to token-gated channels and roles.</p>
 
 
 </p>
