--- a/middleground.html
+++ b/middleground.html
@@ -69,7 +69,7 @@
 
   
 <h3>ABOUT MIDDLEGROUND</h3>
-<p>Middleground is a of nine 35mm photographs by Brian McHale. All photos were used as backgrounds in <a href="https://onebraintogether.com/obt"><font color="blue">Obt.</font></a>, a digital collectible project by One Brain Together. There are 11 editions of each photo, with a randomized mint.</p> 
+<p>Middleground is an ERC-721 collection of nine 35mm photographs by Brian McHale. All photos were used as backgrounds in <a href="https://onebraintogether.com/obt"><font color="blue">Obt.</font></a>, a digital collectible project by One Brain Together. There are 11 editions of each photo, with a randomized mint.</p> 
 
 <p><b>All Middleground collectors will have the ability to purchase a numbered hi-res print of their photo.<br>Collectors who mint three (3) Middleground tokens can redeem one (1) FREE hi-res print of the photo of their choice.<br>Collectors who mint five (5) Middleground tokens can redeem two (2) FREE hi-res prints of the photos of their choice.</b></p>
 
