--- a/middleground.html
+++ b/middleground.html
@@ -32,7 +32,6 @@
         </h2>
 	</header>
 	
-
 <div id="bueno-embed-container"></div>
 
 <script type="module">
@@ -44,12 +43,13 @@
 
   widget.init({
     contractId: "ltOFR0q39ticLbMHXsNNN",
-    button: { background: "#5062FE" },
+    button: { background: "#3400ff" },
     showPrice: true,
     showSupply: true,
     autoConnect: false,
   });
 </script>
+  
   
 	
 <p><b>Middleground</b> is a series of nine photography editions by Brian McHale. It is a companion collection to <a href="https://opensea.io/collection/onebraintogether"><font color="blue">Obt.</font></a>, our digital collectible project. To mint, you will need an <a href="https://metamask.io/"><font color="blue">Ethereum wallet</font></a>.</p>
